--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,28 @@ html{
     beige, brown);*/
 }
 
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #main{
+    overflow: hidden;
     background-color: burlywood;
-    width: 80%;
+    width: 60%;
+    height: 40%;
     margin-left: 120px;
     margin-top: 50px;
-    padding: 20px;
+    padding: 10px;
     box-shadow:0 10px 20px rgba(0,0,0,0.19),0 6px 6px rgba(0,0,0,0.23);
-
+}
+h1{
+    padding: 20px;
+    padding-bottom: 30px;
+}
+#person-bday{
+    padding: 10px;
 }
 
 h2{
